@@ -259,6 +259,12 @@
 BA,1355,SIN,3316,MEL,3339,Y,0,744
 TOM,5013,ACE,1055,BFS,465,,0,320
 </pre>
+
+	    <p>Route maps for airports and airlines can be viewed by <a href="http://openflights.org/blog/2009/07/15/airline-route-maps-launched-metric-distances-available/">searching for their names or code in the website's Search
+	    box</a>; alternatively, check out the <a
+	    href="/html/route-maps.php">alphabetical list of all
+	    covered airports and airlines</a>.</p>
+	    
 	    <h4>Download</h4>
 
 	    <p>To download the current data dump from <a href="http://sourceforge.net/projects/openflights">SourceForge</a> as a tab-delimited file, suitable for use in spreadsheets etc, simply click below:</p>
